Bug 288159 - i18n done horribly
Summary: i18n done horribly
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-i18n (other bugs)
Version First Reported In: 2.3.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-03 20:28 UTC by Alexander Potashev
Modified: 2017-08-18 13:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2011-12-03 20:28:54 UTC
Version:           unspecified (using KDE 4.7.3) 
OS:                Linux

Here are the i18n problems that I have found in PhotoLayoutsEditor:
1. Names of many `QUndoCommand`s are weird, for example: "Border changed", should be "Change Border" or "Border Change".
2. Missing i18n() call for "Delete item" in photolayoutseditor/widgets/canvas/Scene.cpp at line 663.
3. Missing i18n() calls for "Color", "Image" and "Pattern" in photolayoutseditor/widgets/tools/CanvasEditTool.cpp around the line 85.
4. Other mistakes by `msgid`:

|||   hardcoded bracket
#: effects/PixelizePhotoEffect.cpp:123
msgid "Pixelize ["

|||   add "..."
#: plugin/photolayoutseditor.cpp:256
msgctxt "Export current frame layout to image file"
msgid "Export"

|||   add "..."
#: plugin/photolayoutseditor.cpp:298
msgctxt "Configure grid lines visibility"
msgid "Setup grid"

|||   add "..."
#: plugin/photolayoutseditor.cpp:302
msgctxt "Configure canvas size"
msgid "Change canvas size"

|||   can't -> cannot
#: plugin/photolayoutseditor.cpp:423
msgid "Can't read image file."

|||   remove "!"
#: plugin/photolayoutseditor.cpp:539
msgid "There is nothing to save!"

|||   remove "!"
#: plugin/photolayoutseditor.cpp:567
msgid "Unexpected error while saving an image!"

|||   remove "!"
#: plugin/photolayoutseditor.cpp:705 widgets/canvas/Canvas.cpp:884
msgid "Invalid image size!"

|||   hardcoded concatenation
#: threads/ImageLoadingThread.cpp:171 threads/ImageLoadingThread.cpp:247
msgid "Loading "

|||   add "..."
#: threads/ImageLoadingThread.cpp:185 threads/ImageLoadingThread.cpp:275
msgid "Decoding image"

|||   add "..."
#: threads/PhotoItemLoader.cpp:102 threads/TextItemLoader.cpp:97
msgid "Finishing"

|||   add "..."
#: threads/TextItemLoader.cpp:60
msgid "Reading text"

|||   add "..."
#: threads/TextItemLoader.cpp:76
msgid "Reading color"

|||   add "..."
#: threads/TextItemLoader.cpp:87
msgid "Reading fonts"

|||   add "..."
#: threads/AbstractPhotoItemLoader.cpp:75
msgid "Reading properties"

|||   add "..."
#: threads/AbstractPhotoItemLoader.cpp:136
msgid "Reading borders"

|||   add "..."
#: threads/AbstractPhotoItemLoader.cpp:162
msgid "Reading effects"

|||   add "..."
#: threads/AbstractPhotoItemLoader.cpp:179
msgid "Reading cropping shape"

|||   add "..."
#: threads/CanvasSavingThread.cpp:75
msgid "Creating canvas"

|||   add "..."
#: threads/CanvasSavingThread.cpp:125
msgid "Saving scene"

|||   add "..."
#: threads/CanvasSavingThread.cpp:144
msgid "Encoding data"

|||   add "..."
#: threads/CanvasSavingThread.cpp:155
msgid "Writing data to file"

|||   hardcoded plural form
#: widgets/canvas/ScalingWidgetItem.cpp:482
msgid "Scale items"

|||   hardcoded plural form
#: widgets/canvas/ScalingWidgetItem.cpp:497 widgets/canvas/Scene.cpp:332
msgid "Move items"

|||   hardcoded plural form
#: widgets/canvas/RotationWidgetItem.cpp:45
msgid "Rotate item"

|||   hardcoded plural form
#: widgets/canvas/RotationWidgetItem.cpp:275
msgid "Rotate items"

|||   hardcoded plural form
#: widgets/canvas/Scene.cpp:281 widgets/canvas/Scene.cpp:289
msgid "Add item"

|||   hardcoded plural form
#: widgets/canvas/Scene.cpp:289 widgets/canvas/Scene.cpp:610
msgid "Add items"

|||   hardcoded plural form
#: widgets/canvas/Scene.cpp:471
msgid "Crop item"

|||   use plurals
|||   remove "!"
#: widgets/canvas/Scene.cpp:1385
#, kde-format
msgid "Unable to create %1 element(s)!"

|||   the most badly hardcoded i18n I have ever seen
#: widgets/canvas/Scene.cpp:1492
#, kde-format
msgid "Are you sure you want to delete %1 selected item%2?"

|||   "%s"?! append()?! GNOME guys, are you here?
#: widgets/items/PhotoItem.cpp:141
#, c-format
msgid ""
"Can't find image file in this location:\n"
" %s\n"
"\n"
"Would you like to set new location of this file?\n"
"If not this image will be removed from the composition."


Reproducible: Always


Actual Results:  
 

Expected Results:
Comment 1 Łukasz Spas 2011-12-31 12:43:36 UTC
Git commit 9b115683af0d5deff4903a44b74ed12163d156b9 by Łukasz Spas.
Committed on 31/12/2011 at 13:43.
Pushed by lukaszspas into branch 'master'.

M  +4    -2    photolayoutseditor/borders/BorderChangeListener.cpp
M  +1    -1    photolayoutseditor/effectplugins/blur/BlurPhotoEffect.cpp
M  +1    -1    photolayoutseditor/effectplugins/colorize/ColorizePhotoEffect.cpp
M  +1    -1    photolayoutseditor/effectplugins/grayscale/GrayscalePhotoEffect.cpp
M  +1    -1    photolayoutseditor/effectplugins/negative/NegativePhotoEffect.cpp
M  +0    -29   photolayoutseditor/effectplugins/negative/NegativePhotoEffect.h
M  +1    -1    photolayoutseditor/effectplugins/sepia/SepiaPhotoEffect.cpp
M  +1    -1    photolayoutseditor/effects/AbstractPhotoEffectFactory.h
M  +6    -0    photolayoutseditor/listeners/TextColorChangeListener.h
M  +6    -0    photolayoutseditor/listeners/TextFontChangeListener.h
M  +2    -0    photolayoutseditor/models/AbstractMovableModel.h
M  +10   -10   photolayoutseditor/plugin/photolayoutseditor.cpp
M  +4    -4    photolayoutseditor/threads/AbstractPhotoItemLoader.cpp
M  +4    -4    photolayoutseditor/threads/CanvasSavingThread.cpp
M  +3    -3    photolayoutseditor/threads/PhotoItemLoader.cpp
M  +4    -4    photolayoutseditor/threads/TextItemLoader.cpp
M  +7    -3    photolayoutseditor/undo/UndoMoveRowsCommand.cpp
M  +80   -80   photolayoutseditor/utils/KEditFactory.h
M  +9    -9    photolayoutseditor/utils/SavingThread.h
M  +1    -1    photolayoutseditor/widgets/canvas/RotationWidgetItem.cpp
M  +2    -2    photolayoutseditor/widgets/canvas/ScalingWidgetItem.cpp
M  +10   -11   photolayoutseditor/widgets/canvas/Scene.cpp
M  +8    -8    photolayoutseditor/widgets/canvas/SceneBackground.cpp
M  +7    -7    photolayoutseditor/widgets/dialogs/CanvasSizeDialog.cpp
M  +2    -2    photolayoutseditor/widgets/items/AbstractPhoto.cpp
M  +11   -9    photolayoutseditor/widgets/items/PhotoItem.cpp
M  +6    -6    photolayoutseditor/widgets/items/TextItem.cpp
M  +2    -1    photolayoutseditor/widgets/tools/AbstractItemsTool.h
M  +1    -0    photolayoutseditor/widgets/tools/AbstractTool.h
M  +1    -1    photolayoutseditor/widgets/tools/CanvasEditTool.cpp
M  +1    -1    photolayoutseditor/widgets/tools/ToolsDockWidget.cpp

http://commits.kde.org/kipi-plugins/9b115683af0d5deff4903a44b74ed12163d156b9
Comment 2 Alexander Potashev 2012-01-03 18:29:12 UTC
Messages like "Scale item(s)" are not acceptable, the correct way to introduce plural forms is to use the `i18np()` call instead of `i18n()`.
Comment 3 Łukasz Spas 2012-01-04 11:13:37 UTC
Git commit a94841d634169b49810f45e1c8355b54cce6308e by Łukasz Spas.
Committed on 04/01/2012 at 12:07.
Pushed by lukaszspas into branch 'master'.

M  +1    -1    photolayoutseditor/widgets/canvas/RotationWidgetItem.cpp
M  +2    -2    photolayoutseditor/widgets/canvas/ScalingWidgetItem.cpp
M  +8    -8    photolayoutseditor/widgets/canvas/Scene.cpp

http://commits.kde.org/kipi-plugins/a94841d634169b49810f45e1c8355b54cce6308e