photolayoutseditor/widgets/canvas/Scene.cpp
@@ -286,7 +286,7 @@ class KIPIPhotoLayoutsEditor::AddItemsCommand : public QUndoCommand
             items << item;
         }
         AddItemsCommand(const QList<AbstractPhoto*> & items, int position, Scene * scene, QUndoCommand * parent = 0) :
-            QUndoCommand(i18n("Add item(s)"), parent),
+            QUndoCommand(i18np("Add item", "Add items", items.count()), parent),
             items(items),
             position(position),
             scene(scene),
@@ -329,7 +329,7 @@ class KIPIPhotoLayoutsEditor::MoveItemsCommand : public QUndoCommand
         bool done;
     public:
         MoveItemsCommand(QMap<AbstractPhoto*,QPointF> items, Scene * scene, QUndoCommand * parent = 0) :
-            QUndoCommand(i18n("Move item(s)"), parent),
+            QUndoCommand(i18np("Move item", "Move items", items.count()), parent),
             m_items(items),
             m_scene(scene),
             done(true)
@@ -468,7 +468,7 @@ class KIPIPhotoLayoutsEditor::CropItemsCommand : public QUndoCommand
     QMap<AbstractPhoto*,QPainterPath> data;
 public:
     CropItemsCommand(const QPainterPath & path, const QList<AbstractPhoto*> & items, QUndoCommand * parent = 0) :
-        QUndoCommand(i18n("Crop item(s)"), parent)
+        QUndoCommand(i18np("Crop item", "Crop items", items.count()), parent)
     {
         qDebug() << "scene crop shape" << path.boundingRect();
         foreach (AbstractPhoto * item, items)
@@ -607,7 +607,7 @@ void Scene::addItems(const QList<AbstractPhoto*> & items)
     QUndoCommand * parent = 0;
     QUndoCommand * command = 0;
     if (items.count() > 1)
-        parent = new QUndoCommand(i18n("Add item(s)"));
+        parent = new QUndoCommand( i18np("Add item", "Add items", items.count()) );
 
     foreach (AbstractPhoto * item, tempItems)
         command = new AddItemsCommand(item, insertionRow++, this, parent);
@@ -635,7 +635,7 @@ void Scene::removeItems(const QList<AbstractPhoto *> & items)
     QUndoCommand * command = 0;
     QUndoCommand * parent = 0;
     if (items.count() > 1)
-        parent = new QUndoCommand("Remove item(s)");
+        parent = new QUndoCommand( i18np("Remove item", "Remove items", items.count()) );
     foreach (AbstractPhoto * item, items)
         command = new RemoveItemsCommand(item, this, parent);
     if (parent)
@@ -659,7 +659,7 @@ void Scene::contextMenuEvent(QGraphicsSceneMouseEvent * event)
     QList<AbstractPhoto*> items = this->selectedItems();
     if (items.count())
     {
-        QAction * removeAction = menu.addAction( i18n("Delete selected item(s)") );
+        QAction * removeAction = menu.addAction( i18np("Delete selected item", "Delete selected items", items.count()) );
         connect(removeAction, SIGNAL(triggered()), this, SLOT(removeSelectedItems()));
         menu.addSeparator();
     }
@@ -1382,7 +1382,7 @@ Scene * Scene::fromSvg(QDomElement & sceneElement)
     if (errorsCount)
     {
         KMessageBox::error(0,
-                           i18n("Unable to create %1 element(s)!", errorsCount));
+                           i18np("Unable to create one element!", "Unable to create %1 elements!", errorsCount));
     }
 
     return result;
@@ -1488,7 +1488,7 @@ bool Scene::askAboutRemoving(int count)
 {
     if (count)
     {
-        int result = KMessageBox::questionYesNo(KApplication::activeWindow(), i18n("Are you sure you want to delete %1 selected item(s)?", count), i18n("Items deleting"));
+        int result = KMessageBox::questionYesNo(KApplication::activeWindow(), i18np("Are you sure you want to delete selected item?", "Are you sure you want to delete %1 selected items?", count), i18n("Items deleting"));
         if (result == KMessageBox::Yes)
             return true;
     }
